<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="68sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lema"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="18dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/act_pri_btn_iniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/text_iniciar"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/act_pri_btn_comoJugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_comoJugar"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/act_pri_btn_puntuaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_puntuaciones"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            <Button
                android:id="@+id/act_pri_btn_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_info"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>